kubernetes/prometheus/overlays/microshift/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: node-exporter
  namespace: prometheus
spec:
  rules:
    - host: node-exporter.microshift.arthurvardevanyan.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: node-exporter
                port:
                  name: metrics
